fix: add mobile breakpoint for banner since it gets too small when adding other buttons

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -5,6 +5,12 @@
     --banner-height: 600px;
 }
 
+@media (max-width: 567px) {
+    :root {
+        --banner-height: 800px;
+    }
+}
+
 h1,
 h2,
 h3,
